--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<title>Testing</title>	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+	<script src="js/.env.js"></script>
 </head>
 <body>
 	<h1>This is a page.</h1>
-	<div id="player"></div>	
+	<ul id="list"></ul>	
 	<div id="webgl-canvas"></div>
 	
 	<script src="js/three.min.js"></script>
