--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 	<h1>This is a page.</h1>
 	<ul id="list"></ul>	
 	<div id="webgl-canvas"></div>
-	
+	<script>
+		$(document).ready(function(){
+	$('button').on('click', function(e) { console.log(e) });
+});
+	</script>
 	<script src="js/three.min.js"></script>
+	<div id="mp3_player">
+				<div id="audio_box"></div>
+					<canvas id="analyser_render"></canvas>
+			</div>
 	<!-- <script src="js/OrbitControls.js"></script>
 	<script src="js/main.js"></script>
 	
