--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 	<script src="js/.env.js"></script>
 	<script src="js/stats.js"></script>
+	<!-- <script src="js/three.min.js"></script> -->
 </head>
 <body>
 	<h1>This is a page.</h1>
+	<hr>
+	
+	<p id="loading">loading data...</p>
+
 	<ul id="list"></ul>	
+	
+	<hr>
+	
 	<div id="webgl-canvas"></div>
-	<script>
-		$(document).ready(function(){
-	$('button').on('click', function(e) { console.log(e) });
-});
-	</script>
-	<script src="js/three.min.js"></script>
+	
+	<h2>Audio Viz...</h2>
 	<div id="mp3_player">
 		<div id="audio_box"></div>
 		<canvas id="analyser_render"></canvas>
