--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Testing</title>	
+	<title>Testing</title>
+	<script src='node_modules/nprogress/nprogress.js'></script>
+	<link rel='stylesheet' href='node_modules/nprogress/nprogress.css'/>	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
