--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Testing</title>
-	<script src='node_modules/nprogress/nprogress.js'></script>
-	<link rel='stylesheet' href='node_modules/nprogress/nprogress.css'/>	
+	<script src="js/utilities/pace.js"></script>
+	<link rel="stylesheet" href="css/pace.css">
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 	<script src="js/.env.js"></script>
-	<script src="js/stats.js"></script>
+	<script src="js/utilities/stats.js"></script>
 	<!-- <script src="js/three.min.js"></script> -->
+	<script>
+		paceOptions = {
+		  ajax: true, // disabled
+		  document: true, // disabled
+		  eventLag: true, // disabled
+		  elements: {
+		    selectors: ['body']
+		  }
+		};
+	</script>
 </head>
 <body>
 	<h1>This is a page.</h1>
-	<hr>
-	
+	<hr>	
 	<p id="loading">loading data...</p>
-
-	<ul id="list"></ul>	
-	
-	<hr>
-	
-	<div id="webgl-canvas"></div>
-	
+	<ul id="list"></ul>		
+	<hr>	
+	<div id="webgl-canvas"></div>	
 	<h2>Audio Viz...</h2>
 	<div id="mp3_player">
 		<div id="audio_box"></div>
@@ -31,8 +36,6 @@
 	</div>
 	<!-- <script src="js/OrbitControls.js"></script> -->
 	<!-- <script src="js/main.js"></script> -->
-	
-	
 	<script>
 		var stats = new Stats();
 		stats.showPanel( 1 ); // 0: fps, 1: ms, 2: mb, 3+: custom
@@ -52,9 +55,7 @@
 
 		requestAnimationFrame( animate );
 
-	</script>
-
+	</script>	
 	<script src="js/audioHandler.js"></script>
-
 </body>
 </html>
