--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
 	<script src="js/.env.js"></script>
 	<script src="js/utilities/stats.js"></script>
 	<!-- <script src="js/three.min.js"></script> -->
-	<script>
-		paceOptions = {
-		  ajax: true, // disabled
-		  document: true, // disabled
-		  eventLag: true, // disabled
-		  elements: {
-		    selectors: ['body']
-		  }
-		};
-	</script>
+	<script src="js/utilities/init_pace.js"></script>
 </head>
 <body>
+<div class="wrapper">
 	<h1>This is a page.</h1>
 	<hr>	
 	<p id="loading">loading data...</p>
@@ -34,28 +26,13 @@
 		<div id="audio_box"></div>
 		<canvas id="analyser_render"></canvas>
 	</div>
+	
+
+</div>
+	
 	<!-- <script src="js/OrbitControls.js"></script> -->
 	<!-- <script src="js/main.js"></script> -->
-	<script>
-		var stats = new Stats();
-		stats.showPanel( 1 ); // 0: fps, 1: ms, 2: mb, 3+: custom
-		statsView = document.body.appendChild( stats.dom );
-
-		function animate() {
-
-		    stats.begin();
-
-		    // monitored code goes here
-
-		    stats.end();
-
-		    requestAnimationFrame( animate );
-
-		}
-
-		requestAnimationFrame( animate );
-
-	</script>	
+	<script src="js/utilities/init_stats.js"></script>	
 	<script src="js/audioHandler.js"></script>
 </body>
 </html>
