--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 	<script src="js/.env.js"></script>
 	<script src="js/utilities/stats.js"></script>
-	<!-- <script src="js/three.min.js"></script> -->
+	<script src="js/threejs/three.min.js"></script>
 	<script src="js/utilities/init_pace.js"></script>
 </head>
 <body>
@@ -20,19 +20,21 @@
 	<p id="loading">loading data...</p>
 	<ul id="list"></ul>		
 	<hr>	
-	<div id="webgl-canvas"></div>	
+	<canvas id="analyser_render"></canvas>	
 	<h2>Audio Viz...</h2>
 	<div id="mp3_player">
-		<div id="audio_box"></div>
-		<canvas id="analyser_render"></canvas>
+		<div id="audio_box"></div>		
 	</div>
-	
 
+	<hr>
+	<div id="webgl"></div>
 </div>
 	
-	<!-- <script src="js/OrbitControls.js"></script> -->
+	<script src="js/threejs/OrbitControls.js"></script>
 	<!-- <script src="js/main.js"></script> -->
 	<script src="js/utilities/init_stats.js"></script>	
 	<script src="js/audioHandler.js"></script>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
